--- a/src/assets/css/init.css
+++ b/src/assets/css/init.css
@@ -29,7 +29,7 @@ del, dfn, em, img, ins, kbd, q, s, samp,
 small, strike, strong, sub, sup, tt, var,
 b, u, i, center,
 dl, dt, dd, ol, ul, li {
-    white-space: pre-line;
+    white-space: pre-wrap;
 }
 h1, h2, h3, h4, h5, h6 {
     font-weight: 600;
@@ -74,30 +74,21 @@ footer, header, hgroup, menu, nav, section {
 body {
     line-height: 1;
 }
-ol, ul {
+/* ol, ul {
     list-style: none;
-}
-blockquote, q {
+} */
+/* blockquote, q {
     quotes: none;
-}
-blockquote:before, blockquote:after,
+} */
+/* blockquote:before, blockquote:after,
 q:before, q:after {
     content: '';
     content: none;
-}
+} */
 table {
     border-collapse: collapse;
     border-spacing: 0;
 }
-a{
-    color: #000;
-    text-decoration: none;
-}
-a:hover{
-    color: #000;
-    text-decoration: none;
-}
-
 html, body {
     width: 100%;
     height: 100%;
